	* fuser silent if /proc/swaps not available SF#3072134
	* ppc 64 support for peekfd by jgorig SF#3166444
	* jiffies now ULL in killall SF#3138538
	* pstree can show parents of a process. Patch supplied by Curtis
	  Hawthorne SF#3135157
	* killall creates right size buffer instead of MAX_PATH Debian #623425
	* check for /proc/$$/stat not /proc/self/stat which is not available
	  on hurb platforms. Same Debian bug as above

Changes in 22.13
================
	* configure patch for x86_64 properly applied SF#3029302 by snowman123
	* patch configure so pt_regs isn't used on SuperH. Fix by
	  Nobuhiro Iwamatsu in Debian #588986
	* Fixed configure.ac so only mipsel not mips compiles peekfd

Changes in 22.12
================
	* In fuser, switched the ipv6 and ipv4 checks around Debian #581604
	* peekfd configure patch for x86_64 SF#2986027
	* peekfd works with ARM and MIPS thanks to patch by Arnaud Patard
	* peekfd off-by-one patch applied SF#1948351
	* pstree -a doesn't segfault on grsec kernels Debian #588152

Changes in 22.11
================
	* Another attempted at killall -SIGNAME Debian #573924

Changes in 22.10
================
	* fuser -k -m ... won't kill itself Debian #562767
	* fuser -NAME fixed SF #2924691, Debian #563388, Gentoo #297423
	* Added locale.h include for killall on non NLS SF #2922163
	* Reversed normal file fuser -k check Debian #563387

Changes in 22.9
===============
	* short option l returned in fuser Debian #539087
	* long options terminated with 0s Debian #551833
	* fuser only kills normal processes, patch thanks to Erik Li SF# 2892724
	* New fuser -M if you REALLY want mount points, patch thanks to
	  Jeremie LE HEN SF#2899709
	* Fixed killall options for VTALRM and ILL Debian #559011
	* pstree -a does not compact threads Debian #525632
	* new program prtstat which prints contents of /proc/<pid>/stat 
	  Debian #281706
	* killall restricts by date. Thanks to George Danchev Debian #544657