@@ -1,4 +1,4 @@
-.TH FUSER 1 2009-11-23 "Linux" "User Commands"
+.TH FUSER 1 2011-06-19 "Linux" "User Commands"
 .SH NAME
 fuser \- identify processes using files or sockets
 .SH SYNOPSIS
@@ -169,9 +169,6 @@ reasons.
 .PP
 \fBudp\fR and \fBtcp\fR name spaces, and UNIX domain sockets can't be
 searched with kernels older than 1.3.78.
-.PP
-\fBudp\fR and \fBtcp\fR currently  work with IPv6 and IPv4, but the
-address fields can only be IPv4 addresses.
 .PP
 Accesses by the kernel are only shown with the \fB\-v\fR option.
 .PP
